# ProtCNN

./: Dockerfile  README.md  params.json  pyproject.toml
data/: data_utils.py  dataloader.py  datamodule.py
docs/: cli_evaluation.md  cli_hyperparameters.md  cli_train.md
experiments/my_experiment/version_0/: hparams.yaml
experiments/my_experiment/version_4/: hparams.yaml
experiments/my_experiment/version_5/: hparams.yaml
experiments/my_experiment/version_9/: hparams.yaml
models/: model_utils.py  protcnn.py
scripts/: evaluate.py  hyperparameters.py  script_utils.py  tmp.py  train.py
tests/: test_dataloader.py  test_datamodule.py  test_params.py  test_protcnn.py
